Added resource (shader) file and src directory.

--- a/res/CMakeLists.txt
+++ b/res/CMakeLists.txt
@@ -17,15 +17,4 @@
 # MA 02110-1301, USA.
 #
 
-cmake_minimum_required(VERSION 3.5.0)
-project(multimedia_libs VERSION 0.1.0 LANGUAGES C CXX)
-
-include(CTest)
-enable_testing()
-
-set(CPACK_PROJECT_NAME ${PROJECT_NAME})
-set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
-include(CPack)
-
-add_subdirectory(res)
-add_subdirectory(src)
+add_subdirectory(shaders)
