Rewrote it to conform to the toolkits code

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,9 +17,9 @@
 # MA 02110-1301, USA.
 #
 
-add_executable( allegro_demo allegro_demo.cc load_shaders.cc )
-add_executable( sdl_demo sdl_demo.cc load_shaders.cc )
-add_executable( sfml_demo sfml_demo.cc load_shaders.cc )
+add_executable( allegro_demo allegro_demo.cc scene.cc )
+add_executable( sdl_demo sdl_demo.cc scene.cc )
+add_executable( sfml_demo sfml_demo.cc scene.cc )
 
 set(OpenGL_GL_PREFERENCE GLVND)
 find_package(OpenGL REQUIRED)
